Alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ nav h3{
     .grid-container {
         margin-top: 2em;
         display: grid;
-        gap: 0px 24px;
+        gap: 16px 16px;
         grid-template-columns: auto auto auto;
       }
       .image-container {
@@ -207,7 +207,7 @@ nav h3{
     
       .grid-container > div {
         text-align: center;
-        font-size: 30px;
+        font-size: 24px;
       }
 
       .grid-container img:hover{
@@ -216,7 +216,7 @@ nav h3{
 
       .grid-item img{
           max-width: 100%;
-          border-radius: 8px;
+          /*border-radius: 8px;*/
       }
 
 
@@ -224,7 +224,7 @@ nav h3{
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row: 1;
-        max-width: 683px ;
+        max-width: 100% ;
 
       }
       .toplong {
@@ -232,7 +232,7 @@ nav h3{
         grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end: 3;
-        max-width: 331px ;
+        max-width: 100% ;
 
       }
       .middle {
@@ -240,9 +240,8 @@ nav h3{
         grid-column-end: 3;
         grid-row-start: 2;
         grid-row-end: 3;
-        max-width: 328px ;
-        border-radius: 12px;
-        max-height: 334.18px;
+        max-width: 100% ;
+        max-height: 100%px;
 
       }
       .sidelong {
@@ -250,7 +249,7 @@ nav h3{
         grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 4;
-       max-width: 331px ;
+       max-width: 100% ;
 
       }
       .sidewide {
@@ -258,11 +257,11 @@ nav h3{
         grid-column-end: 4;
         grid-row-start: 3;
         grid-row-end: 4;
-       max-width: 683px ;
+        max-width: 100% ;
       }
       
       .fullwidth {
-        margin-top: 5px;
+        margin-top: -16px;
         padding-top: 24px;
         grid-column-start: 1;
         grid-column-end: 5;
@@ -706,7 +705,7 @@ nav h3{
           }
           .sidewide {
           max-width: 100%;
-           margin-top: 4px;
+           /*margin-top: 4px;*/
         
     
           }
